# CTDL-GT

./: de1.c  de1_bai2.c
 bài new/: CMakeLists.txt
PTIT_CNTT1_IT201_Session01_Bai01-05/: CMakeLists.txt
PTIT_CNTT1_IT201_Session01_Bai06-08/: main.c
PTIT_CNTT1_IT201_Session02/: CMakeLists.txt  PTIT_CNTT1_IT201_Session02_Bai01.c  PTIT_CNTT1_IT201_Session02_Bai02.c  PTIT_CNTT1_IT201_Session02_Bai03.c  PTIT_CNTT1_IT201_Session02_Bai04.c  PTIT_CNTT1_IT201_Session02_Bai05.c  PTIT_CNTT1_IT201_Session02_Bai06.c  PTIT_CNTT1_IT201_Session02_Bai07.c  PTIT_CNTT1_IT201_Session02_Bai08.c
PTIT_CNTT1_IT201_Session03/: CMakeLists.txt  PTIT_CNTT1_IT201_Session03_bai01.c  PTIT_CNTT1_IT201_Session03_bai02.c  PTIT_CNTT1_IT201_Session03_bai03.c  PTIT_CNTT1_IT201_Session03_bai04.c  PTIT_CNTT1_IT201_Session03_bai05.c  PTIT_CNTT1_IT201_Session03_bai06.c  PTIT_CNTT1_IT201_Session03_bai07.c
PTIT_CNTT1_IT201_Session04/: CMakeLists.txt  PTIT_CNTT1_IT201_Session04_bai01.c  PTIT_CNTT1_IT201_Session04_bai02.c  PTIT_CNTT1_IT201_Session04_bai03.c  PTIT_CNTT1_IT201_Session04_bai04.c  PTIT_CNTT1_IT201_Session04_bai05.c  PTIT_CNTT1_IT201_Session04_bai06.c  PTIT_CNTT1_IT201_Session04_bai07.c  PTIT_CNTT1_IT201_Session04_bai08.c
PTIT_CNTT1_IT201_Session05/: CMakeLists.txt  PTIT_CNTT1_IT201_Session05_bai01.c  PTIT_CNTT1_IT201_Session05_bai02.c  PTIT_CNTT1_IT201_Session05_bai03.c  PTIT_CNTT1_IT201_Session05_bai04.c  PTIT_CNTT1_IT201_Session05_bai05.c  PTIT_CNTT1_IT201_Session05_bai06.c  PTIT_CNTT1_IT201_Session05_bai08.c  PTIT_CNTT1_IT201_Session05_bai09.c
PTIT_CNTT1_IT201_Session06/: CMakeLists.txt  PTIT_CNTT1_IT201_Session06_bai01.c  PTIT_CNTT1_IT201_Session06_bai02.c  PTIT_CNTT1_IT201_Session06_bai03.c  PTIT_CNTT1_IT201_Session06_bai04.c  PTIT_CNTT1_IT201_Session06_bai05.c  PTIT_CNTT1_IT201_Session06_bai06.c
PTIT_CNTT1_IT201_Session07/: CMakeLists.txt  PTIT_CNTT1_IT201_Session07_bai01.c  PTIT_CNTT1_IT201_Session07_bai02.c  PTIT_CNTT1_IT201_Session07_bai03.c  PTIT_CNTT1_IT201_Session07_bai04.c  PTIT_CNTT1_IT201_Session07_bai05.c  PTIT_CNTT1_IT201_Session07_bai06.c
PTIT_CNTT1_IT201_Session08/: CMakeLists.txt  PTIT_CNTT1_IT201_Session08_bai01.c  PTIT_CNTT1_IT201_Session08_bai02.c  PTIT_CNTT1_IT201_Session08_bai03.c  PTIT_CNTT1_IT201_Session08_bai04.c  PTIT_CNTT1_IT201_Session08_bai05.c  PTIT_CNTT1_IT201_Session08_bai06.c  PTIT_CNTT1_IT201_Session08_bai07.c  PTIT_CNTT1_IT201_Session08_bai08.c
PTIT_CNTT1_IT201_Session09/: CMakeLists.txt  PTIT_CNTT1_IT201_Session09_bai01.c  PTIT_CNTT1_IT201_Session09_bai02.c  PTIT_CNTT1_IT201_Session09_bai03.c  PTIT_CNTT1_IT201_Session09_bai04.c  PTIT_CNTT1_IT201_Session09_bai05.c  PTIT_CNTT1_IT201_Session09_bai06.c
PTIT_CNTT1_IT201_Session10/: CMakeLists.txt  PTIT_CNTT1_IT201_Session10_bai01.c  PTIT_CNTT1_IT201_Session10_bai02.c  PTIT_CNTT1_IT201_Session10_bai03.c  PTIT_CNTT1_IT201_Session10_bai04.c  PTIT_CNTT1_IT201_Session10_bai05.c  PTIT_CNTT1_IT201_Session10_bai06.c  PTIT_CNTT1_IT201_Session10_bai07.c
PTIT_CNTT1_IT201_Session11/: CMakeLists.txt  PTIT_CNTT1_IT201_Session11-bai01.c  PTIT_CNTT1_IT201_Session11-bai02.c  PTIT_CNTT1_IT201_Session11-bai03.c  PTIT_CNTT1_IT201_Session11-bai04.c  PTIT_CNTT1_IT201_Session11-bai05.c  PTIT_CNTT1_IT201_Session11-bai06.c  PTIT_CNTT1_IT201_Session11-bai07.c  PTIT_CNTT1_IT201_Session11-bai08.c
PTIT_CNTT1_IT201_Session12/: CMakeLists.txt  PTIT_CNTT1_IT201_Session12-bai01.c  PTIT_CNTT1_IT201_Session12-bai02.c  PTIT_CNTT1_IT201_Session12-bai03.c  PTIT_CNTT1_IT201_Session12-bai04.c  PTIT_CNTT1_IT201_Session12-bai05.c  PTIT_CNTT1_IT201_Session12-bai06.c  PTIT_CNTT1_IT201_Session12-bai07.c
PTIT_CNTT1_IT201_Session13/: CMakeLists.txt  PTIT_CNTT1_IT201_Session13-bai01.c  PTIT_CNTT1_IT201_Session13-bai02.c  PTIT_CNTT1_IT201_Session13-bai03.c  PTIT_CNTT1_IT201_Session13-bai04.c  PTIT_CNTT1_IT201_Session13-bai05.c  PTIT_CNTT1_IT201_Session13-bai06.c  PTIT_CNTT1_IT201_Session13-bai07.c  PTIT_CNTT1_IT201_Session13-bai08.c
PTIT_CNTT1_IT201_Session14/: CMakeLists.txt  PTIT_CNTT1_IT201_Session14-bai01.c  PTIT_CNTT1_IT201_Session14-bai02.c  PTIT_CNTT1_IT201_Session14-bai03.c  PTIT_CNTT1_IT201_Session14-bai04.c  PTIT_CNTT1_IT201_Session14-bai05.c
PTIT_CNTT1_IT201_Session15/: CMakeLists.txt  PTIT_CNTT1_IT201_Session15-bai01.c  PTIT_CNTT1_IT201_Session15-bai02.c  PTIT_CNTT1_IT201_Session15-bai03.c  PTIT_CNTT1_IT201_Session15-bai04.c  PTIT_CNTT1_IT201_Session15-bai05.c
PTIT_CNTT1_IT201_Session16/: CMakeLists.txt  PTIT_CNTT1_IT201_Session16_bai01.c  PTIT_CNTT1_IT201_Session16_bai02.c  PTIT_CNTT1_IT201_Session16_bai03.c  PTIT_CNTT1_IT201_Session16_bai04.c  PTIT_CNTT1_IT201_Session16_bai05.c  PTIT_CNTT1_IT201_Session16_bai06.c
PTIT_CNTT1_IT201_Session19/: CMakeLists.txt  PTIT_CNTT1_IT201_Session19_bai2.c  PTIT_CNTT1_IT201_Session19_bai3.c  PTIT_CNTT1_IT201_Session19_bai4.c  PTIT_CNTT1_IT201_Session19_bai5.c  PTIT_CNTT1_IT201_Session19_bai6.c
PTIT_CNTT1_IT201_Session20_/: CMakeLists.txt  PTIT_CNTT1_IT201_Session20_bai1.c  PTIT_CNTT1_IT201_Session20_bai2.c  PTIT_CNTT1_IT201_Session20_bai3.c  PTIT_CNTT1_IT201_Session20_bai4.c  PTIT_CNTT1_IT201_Session20_bai5.c  PTIT_CNTT1_IT201_Session20_bai6.c
PTIT_CNTT1_IT201_Session21/: CMakeLists.txt  PTIT_CNTT1_IT201_Session21_BAI1.c  PTIT_CNTT1_IT201_Session21_BAI2.c  PTIT_CNTT1_IT201_Session21_BAI3.c  PTIT_CNTT1_IT201_Session21_BAI4.c
PTIT_CNTT1_IT201_Session22/: CMakeLists.txt  PTIT_CNTT1_IT201_Session22_bai1.c  PTIT_CNTT1_IT201_Session22_bai2.c  PTIT_CNTT1_IT201_Session22_bai3.c  PTIT_CNTT1_IT201_Session22_bai4.c  PTIT_CNTT1_IT201_Session22_bai5.c
PTIT_CNTT1_IT201_Session23/: CMakeLists.txt  bai2.c  ontap08.c
b 1-5/: main.c
ontapbia7/: CMakeLists.txt  bai1.c  bai2.c
