cmake_minimum_required(VERSION 3.31)
project(PTIT_CNTT1_IT201_Session03 C)

set(CMAKE_C_STANDARD 99)

add_executable(PTIT_CNTT1_IT201_Session03 main.c
        PTIT_CNTT1_IT201_Session02_bai02.c
        PTIT_CNTT1_IT201_Session02_bai03.c
        PTIT_CNTT1_IT201_Session02_bai04.c
        PTIT_CNTT1_IT201_Session02_bai05.c
        PTIT_CNTT1_IT201_Session02_bai06.c
        PTIT_CNTT1_IT201_Session02_bai07.c
        PTIT_CNTT1_IT201_Session02_bai08.c
)
