cmake_minimum_required(VERSION 3.31)
project(test C)

set(CMAKE_C_STANDARD 99)

add_executable(test PTIT_CNTT1_IT201_Session04_bai01.c
        PTIT_CNTT1_IT201_Session04_bai02.c
        PTIT_CNTT1_IT201_Session04_bai03.c
        PTIT_CNTT1_IT201_Session04_bai04.c
        PTIT_CNTT1_IT201_Session04_bai05.c
        PTIT_CNTT1_IT201_Session04_bai06.c
        PTIT_CNTT1_IT201_Session04_bai07.c
        PTIT_CNTT1_IT201_Session04_bai08.c
)
