cmake_minimum_required(VERSION 3.31)
project(PTIT_CNTT1_IT201_Session05 C)

set(CMAKE_C_STANDARD 99)

add_executable(PTIT_CNTT1_IT201_Session05 main.c
        PTIT_CNTT1_IT201_Session05_bai01.c
        PTIT_CNTT1_IT201_Session05_bai02.c
        PTIT_CNTT1_IT201_Session05_bai03.c
        PTIT_CNTT1_IT201_Session05_bai04.c
        PTIT_CNTT1_IT201_Session05_bai05.c
        PTIT_CNTT1_IT201_Session05_bai06.c
        PTIT_CNTT1_IT201_Session05_bai08.c
        PTIT_CNTT1_IT201_Session05_bai09.c)
