cmake_minimum_required(VERSION 3.31)
project(untitled C)

set(CMAKE_C_STANDARD 99)

add_executable(untitled main.c
        PTIT_CNTT1_IT201_Session06_bai02.c
        PTIT_CNTT1_IT201_Session06_bai03.c
        PTIT_CNTT1_IT201_Session06_bai04.c
        PTIT_CNTT1_IT201_Session06_bai05.c
        PTIT_CNTT1_IT201_Session06_bai06.c)
