cmake_minimum_required(VERSION 3.31)
project(PTIT_CNTT1_IT201_Session07 C)

set(CMAKE_C_STANDARD 11)

add_executable(PTIT_CNTT1_IT201_Session07 main.c
        PTIT_CNTT1_IT201_Session07_bai02.c
        PTIT_CNTT1_IT201_Session07_bai03.c
        PTIT_CNTT1_IT201_Session07_bai04.c
        PTIT_CNTT1_IT201_Session07_bai05.c
        PTIT_CNTT1_IT201_Session07_bai06.c
        PTIT_CNTT1_IT201_Session07_bai07.c
        PTIT_CNTT1_IT201_Session07_bai08.c)
