cmake_minimum_required(VERSION 3.31)
project(PTIT_CNTT1_IT201_Session08 C)

set(CMAKE_C_STANDARD 11)

add_executable(PTIT_CNTT1_IT201_Session08 main.c
        PTIT_CNTT1_IT201_Session08_bai01.c
        PTIT_CNTT1_IT201_Session08_bai02.c
        PTIT_CNTT1_IT201_Session08_bai03.c
        PTIT_CNTT1_IT201_Session08_bai04.c
        PTIT_CNTT1_IT201_Session08_bai05.c
        PTIT_CNTT1_IT201_Session08_bai06.c
        PTIT_CNTT1_IT201_Session08_bai07.c
        PTIT_CNTT1_IT201_Session08_bai08.c)
