cmake_minimum_required(VERSION 3.31)
project(PTIT_CNTT1_IT201_Session09 C)

set(CMAKE_C_STANDARD 11)

add_executable(PTIT_CNTT1_IT201_Session09 PTIT_CNTT1_IT201_Session09_bai01.c
        PTIT_CNTT1_IT201_Session09_bai02.c
        PTIT_CNTT1_IT201_Session09_bai03.c
        PTIT_CNTT1_IT201_Session09_bai04.c
        PTIT_CNTT1_IT201_Session09_bai05.c
        PTIT_CNTT1_IT201_Session09_bai06.c
        PTIT_CNTT1_IT201_Session09_bai07.c
        PTIT_CNTT1_IT201_Session09_bai08.c
)
