cmake_minimum_required(VERSION 3.31)
project(PTIT_CNTT1_IT201_Session10 C)

set(CMAKE_C_STANDARD 11)

add_executable(PTIT_CNTT1_IT201_Session10 PTIT_CNTT1_IT201_Session10_bai01.c
        PTIT_CNTT1_IT201_Session10_bai02.c
        PTIT_CNTT1_IT201_Session10_bai03.c
        PTIT_CNTT1_IT201_Session10_bai04.c
        PTIT_CNTT1_IT201_Session10_bai05.c
        PTIT_CNTT1_IT201_Session10_bai06.c
        PTIT_CNTT1_IT201_Session10_bai07.c)
