cmake_minimum_required(VERSION 3.31)
project(PTIT_CNTT1_IT201_Session12 C)

set(CMAKE_C_STANDARD 11)

add_executable(PTIT_CNTT1_IT201_Session12 PTIT_CNTT1_IT201_Session12-bai01.c
        PTIT_CNTT1_IT201_Session12-bai02.c
        PTIT_CNTT1_IT201_Session12-bai03.c
        PTIT_CNTT1_IT201_Session12-bai04.c
        PTIT_CNTT1_IT201_Session12-bai05.c
        PTIT_CNTT1_IT201_Session12-bai07.c
        PTIT_CNTT1_IT201_Session12-bai06.c)
