cmake_minimum_required(VERSION 3.31)
project(PTIT_CNTT1_IT201_Session13 C)

set(CMAKE_C_STANDARD 11)

add_executable(PTIT_CNTT1_IT201_Session13 PTIT_CNTT1_IT201_Session13-bai01.c
        PTIT_CNTT1_IT201_Session13-bai02.c
        PTIT_CNTT1_IT201_Session13-bai03.c
        PTIT_CNTT1_IT201_Session13-bai04.c
        PTIT_CNTT1_IT201_Session13-bai05.c
        PTIT_CNTT1_IT201_Session13-bai06.c
        PTIT_CNTT1_IT201_Session13-bai07.c
        PTIT_CNTT1_IT201_Session13-bai08.c)
