cmake_minimum_required(VERSION 3.31)
project(PTIT_CNTT1_IT201_Session15 C)

set(CMAKE_C_STANDARD 11)

add_executable(PTIT_CNTT1_IT201_Session15 PTIT_CNTT1_IT201_Session15-bai01.c
        PTIT_CNTT1_IT201_Session15-bai02.c
        PTIT_CNTT1_IT201_Session15-bai03.c
        PTIT_CNTT1_IT201_Session15-bai04.c
        PTIT_CNTT1_IT201_Session15-bai05.c
        PTIT_CNTT1_IT201_Session15-bai06.c
        PTIT_CNTT1_IT201_Session15-bai07.c
        PTIT_CNTT1_IT201_Session15-bai08.c)
