cmake_minimum_required(VERSION 3.31)
project(PTIT_CNTT1_IT201_Session16 C)

set(CMAKE_C_STANDARD 11)

add_executable(PTIT_CNTT1_IT201_Session16 main.c
        cmake-build-debug/PTIT_CNTT1_IT201_Session16_bai01.c
        PTIT_CNTT1_IT201_Session16_bai01.c
        PTIT_CNTT1_IT201_Session16_bai02.c
        PTIT_CNTT1_IT201_Session16_bai03.c
        PTIT_CNTT1_IT201_Session16_bai05.c
        PTIT_CNTT1_IT201_Session16_bai04.c
        PTIT_CNTT1_IT201_Session16_bai06.c
)
