cmake_minimum_required(VERSION 3.31)
project(untitled1 C)

set(CMAKE_C_STANDARD 11)

add_executable(untitled1 main.c
        PTIT_CNTT1_IT201_Session19_bai1.c
        PTIT_CNTT1_IT201_Session19_bai2.c
        PTIT_CNTT1_IT201_Session19_bai3.c
        PTIT_CNTT1_IT201_Session19_bai4.c
        PTIT_CNTT1_IT201_Session19_bai5.c
        PTIT_CNTT1_IT201_Session19_bai6.c
        PTIT_CNTT1_IT201_Session19_bai7.c
        PTIT_CNTT1_IT201_Session19_bai8.c)
