cmake_minimum_required(VERSION 3.31)
project(PTIT_CNTT1_IT201_Session21 C)

set(CMAKE_C_STANDARD 11)

add_executable(PTIT_CNTT1_IT201_Session21 main.c
        PTIT_CNTT1_IT201_Session21_BAI1.c
        PTIT_CNTT1_IT201_Session21_BAI2.c
        PTIT_CNTT1_IT201_Session21_BAI3.c
        PTIT_CNTT1_IT201_Session21_BAI4.c)
