cmake_minimum_required(VERSION 3.31)
project(PTIT_CNTT1_IT201_Session22 C)

set(CMAKE_C_STANDARD 11)

add_executable(PTIT_CNTT1_IT201_Session22 main.c
        PTIT_CNTT1_IT201_Session22_bai1.c
        PTIT_CNTT1_IT201_Session22_bai2.c
        PTIT_CNTT1_IT201_Session22_bai3.c
        PTIT_CNTT1_IT201_Session22_bai4.c
        PTIT_CNTT1_IT201_Session22_bai5.c)
